--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.42",
+    "@langchain/openai": "^0.4.4",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "openai": "^4.87.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-mic": "^12.4.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
